# Autonomous_Housekeeping_Robot

./: CLAUDE.md  README.md
MATLAB/: pid_tuner_ROBOTMOD.m
src/turtlebot3_gazebo/: CMakeLists.txt  package.xml  setup.py
src/turtlebot3_gazebo/launch/: mapper.launch.py  navigator.launch.py
src/turtlebot3_gazebo/maps/: map.yaml
src/turtlebot3_gazebo/rviz/: tb3_gazebo.rviz
src/turtlebot3_gazebo/scripts/: costmap_server  gazebo_spawner  map_navigator  map_navigator_rrt_star  obstacle_detector  path_follower  slam_explorer  vision_navigator
src/turtlebot3_gazebo/src/: dynamic_obstacles.py  map_navigator.py  map_navigator_RRT_star.py  slam_explorer.py  static_obstacles.py  vision_navigator.py
src/turtlebot3_gazebo/src/lab4/: auto_navigator.py  red_ball_tracker.py  task1.py  task2.py  task2_bonus.py  task3.py
src/turtlebot3_gazebo/src_fcn/: auto_navigator.py
src/turtlebot3_gazebo/turtlebot3_gazebo/common/: geometry_utils.py  graph_utils.py  lidar_utils.py  map_utils.py
src/turtlebot3_gazebo/turtlebot3_gazebo/nodes/: costmap_node.py  frontier_explorer_node.py  gazebo_spawner_node.py  global_planner_node.py  obstacle_detector_node.py  path_follower_node.py  vision_node.py
